@@ -72,6 +72,15 @@ Ext.netzke.filterMap = {
   date:'Date'
 };
 
+Ext.override(Ext.StatusBar, {
+  hideBusy : function(){
+    return this.setStatus({
+      text: this.defaultText,
+      iconCls: this.defaultIconCls
+    });
+  }
+});
+
 Ext.data.RecordArrayReader = Ext.extend(Ext.data.JsonReader, {
   /**
    * Create a data block containing Ext.data.Records from an Array.
